[project]
name = "geocontext-test"
version = "0.1.0"
description = "Integration test suite to validate the correct behavior of the MCP ignfab/geocontext with different models"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.2.15",
    "langchain-anthropic>=1.4.0",
    "langchain-google-genai>=4.2.1",
    "langchain-mcp-adapters>=0.2.2",
    "langgraph>=1.1.6",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
